--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.9.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
@@ -7,6 +9,7 @@ Django==5.2.4
 et_xmlfile==2.0.0
 fonttools==4.59.0
 gunicorn==23.0.0
+idna==3.11
 imageio==2.37.0
 joblib==1.5.1
 kiwisolver==1.4.8
@@ -23,13 +26,17 @@ psycopg2-binary==2.9.11
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+requests==2.32.5
 scikit-image==0.25.2
 scikit-learn==1.7.1
 scipy==1.16.1
 six==1.17.0
 sqlparse==0.5.3
+stripe==14.1.0
 threadpoolctl==3.6.0
 tifffile==2025.6.11
 tqdm==4.67.1
+typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.6.2
 whitenoise==6.11.0
